more tests and logic cleanup